slashies-macros/tests/commands/e03_command_not_implemented.rs
use slashies_macros::Commands;

#[derive(Commands)]
enum BadCommands {
    DoSomething(u64),
}

fn main() {}
